2006-01-11 Kimmo
 Update copyright year, WinMerge version to 2.5 and revision
  Manual: WinMerge_help.xml

2006-01-08 Perry
 BUG: [ 1396950 ] Manual installation doesn't specify admin access
  Manual: Install.xml

2005-12-21 Kimmo
 BUG: [ 1384832 ] ulink has ??? in FAQ
  Manual: Faq.xml

2005-12-20 Perry
 PATCH: [ 1384834 ] Copyedited FAQ
  Manual: Faq.xml

2005-12-19 Perry
 BUG: [ 1384830 ] FAQ suggests non-proportional fonts available in 2.4+
  removed version numbers ("WinMerge does not support non-proportional fonts")
  Manual: Faq.xml

2005-12-08 Kimmo
 PATCH: [ 1375564 ] New encoding FAQ (UTF-8)
  Submitted by Perry
  Manual: Faq.xml

2005-11-09 Kimmo
 PATCH: [ 1351769 ] Manual: Minor update to file compare chapter
  Manual: Compare_files.xml

2005-11-08 Kimmo
 PATCH: [ 1350794 ] Manual: Update About doc chapter
  Manual: About_Doc.xml
 PATCH: [ 1350819 ] Manual: Small improvements for folder compare
  Manual: Compare_dirs.xml

2005-11-01 Kimmo
 PATCH: [ 1344213 ] Manual: typo fixes for Configuration part
  Manual: Configuration.xml
 PATCH: [ 1344219 ] Manual: New FAQ items about archive files detection
  Manual: Faq.xml

2005-10-29 Kimmo
 PATCH: [ 1341076 ] Manual: Mention maximum linefilter length
  Manual: Filters.xml

2005-10-21 Kimmo
 PATCH: [ 1329867 ] Manual: Improve Binary file FAQ
  Manual: Faq.xml

2005-09-20 Kimmo
 PATCH: [ 1295568 ] Manual: New Open-dialog screenshot
  Manual/screenshots: OpenDlg1.gif
 PATCH: [ 1295601 ] Manual: Add linediff coloring
  Manual: Compare_files.xml
  Manual/screenshots new file: filecomp_inlinediff.gif
 PATCH: [ 1295612 ] Manual: add tip for eols and linefilters
  Manual: Filters.xml

2005-09-19 Kimmo
 PATCH: [ 1294595 ] Manual: Update options
  Manual: Configuration.xml

2005-09-18 Kimmo
 PATCH: [ 1294162 ] Manual: First update to file compare
  Manual: Compare_filex.xml
  Manual/Screenshots: filecomp1.gif filecomp_context1.gif filecomp_statusbar1.gif
   linediff.gif